<resources>
    <string name="app_name" translatable="false">UmbrellaClient</string>
    <string name="explanation">This app will notify you of messages from Umbrella waiting for you.</string>
    <string name="credentials">Enter your login credentials below to enable notifications:</string>
    <string name="url">Umbrella-Url:</string>
    <string name="url_example">https://umbrella.example.com</string>
    <string name="username">Username:</string>
    <string name="enter_username">enter your username</string>
    <string name="password">Password:</string>
    <string name="enter_password">enter your password</string>
    <string name="login_failed">login failed!</string>
    <string name="logged_in">logged in!</string>
    <string name="check5">check every 5 minutes</string>
    <string name="check10">check every 10 minutes</string>
    <string name="check15">check every 15 minutes</string>
    <string name="check20">check every 20 minutes</string>
    <string name="check30">check every 30 minutes</string>
    <string name="check_hourly">check every hour</string>
    <string name="check2">check every 2 hours</string>
    <string name="check4">check every 4 hours</string>
    <string name="check_twice_per_day">check every 12 hours</string>
    <string name="check_daily">check once per day</string>
    <string name="test_connection">test connection</string>
    <string name="interval_legend">Select how often Umbrella shall be checked for new messages:</string>
    <string name="enable">enable service</string>
    <string name="trying_to_connect">trying to login…</string>
    <string name="disable">disable service</string>
    <string name="tap_to_display">tap here to display message</string>
    <string name="settings">Settings</string>
    <string name="from">from:</string>
    <string name="time">time:</string>
    <string name="login_btn">login to Umbrella</string>
    <string name="refresh">refresh</string>
    <string name="icon">Umbrella icon</string>
    <string name="dont_check">don\'t check automatically</string>
</resources>
